--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "baseline-browser-mapping": "^2.9.3",
     "postcss": "^8.4.33",
     "postcss-nesting": "^12.0.2",
     "tailwindcss": "^3.4.1",
